--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "buefy": "^0.8.12",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "install": "^0.13.0",
+    "vue": "^2.6.11",
+    "vue-axios": "^2.1.5",
+    "vue-fab": "^2.3.1",
+    "vue-horizontal-list": "^0.1.4",
+    "vue-router": "^3.1.6",
+    "vue-toasted": "^1.1.27"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
