--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "install": "^0.13.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
+    "vue-clipboard2": "^0.3.1",
     "vue-fab": "^2.3.1",
     "vue-horizontal-list": "^0.1.4",
     "vue-router": "^3.1.6",
