--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.17.1",
     "axios": "^0.19.2",
     "buefy": "^0.8.12",
     "core-js": "^3.6.4",
     "install": "^0.13.0",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.2",
     "vue-axios": "^2.1.5",
     "vue-clipboard2": "^0.3.1",
     "vue-fab": "^2.3.1",
